[package]
name = "lunar-lang"
version = "0.1.0"
edition = "2021"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge is yet another mruby that is specialized for running on WASM"
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4.5.37", features = ["cargo"] }
plain = "0.2.3"
purua = "0.2"

[[bin]]
path = "src/main.rs"
name = "lunar"
